# vericlaim

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  vericlaim.toml
.github/: requirements-ci.txt
claimlib/: DEPLOY.md  MODULES.py  README.md  _util.py  build.py  build_literature.py  registry.json  registry_worker.js  registry_worker.py  reproduce_node.py  scaffold.py  vericlaim.toml
claims/: ai_catalog.json  ai_catalog.json.provenance.json  autonomous_cycle.json  autonomous_cycle.json.provenance.json  baseline.json  claimlib_index.json  claimlib_index.json.provenance.json  manifest.md  register.yaml  selfimprove_envelope.json  selfimprove_envelope.json.provenance.json  version.json.provenance.json  witness.jsonl
docs/: README.md  claim-oriented-cookbook.md  claim-register-spec.md  evidence-levels.md  getting-started.md  manifesto.md
domains/: README.md
examples/: README.md
presentation/: README.md  library-catalog.md  vericlaim-deck.html  vericlaim-manus.html  vericlaim-manus.md  vericlaim-whitepaper.html  vericlaim-whitepaper.md
seed/: .gitignore  README.md  generate.py  vericlaim.toml
tests/: test_autonomous_cycle.py  test_biblio_curate.py  test_canon.py  test_chunker.py  test_code_anchors.py  test_coverage.py  test_credibility_fixes.py  test_curate.py  test_domain_cost_routing.py  test_domain_eval_harness.py  test_domain_evidence_graph.py  test_domain_multitenant.py  test_domain_ontologies.py  test_enrich_repo.py  test_examples.py  test_repro.py  (+27 more)
(+3059 files in other folders)
