[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vericlaim"
version = "0.1.3"
description = "A Claim-Oriented Programming gate: verify a project's claims against committed artifacts and keep AI-authored code and docs from drifting. Design by Contract for the whole repository, enforced in CI."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Stian Skogbrott" }]
keywords = [
    "claim-oriented-programming", "design-by-contract", "provenance",
    "documentation-drift", "ci", "github-actions", "ai-assisted-development",
    "reproducibility", "assurance",
]
requires-python = ">=3.11"
# ZERO runtime dependencies — the gate must not add supply-chain surface.
dependencies = []

[project.optional-dependencies]
# PyYAML is optional; the bundled parser handles the register subset without it.
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
vericlaim = "vericlaim.cli:main"

[project.urls]
Homepage = "https://github.com/darklordVirtual/vericlaim"

[tool.hatch.build.targets.wheel]
packages = ["vericlaim"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
